--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!doctype html>
-<title>Site Maintenance</title>
-<style>
-  body { text-align: center; padding: 150px; }
-  h1 { font-size: 50px; }
-  body { font: 20px Helvetica, sans-serif; color: #333; }
-  article { display: block; text-align: left; width: 650px; margin: 0 auto; }
-  a { color: #dc8100; text-decoration: none; }
-  a:hover { color: #333; text-decoration: none; }
-</style>
-
-<article>
-    <h1>We&rsquo;ll be back soon!</h1>
+<html lang="de">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="refresh" content="5;url=https://www.stayhealthy.at">
+  <title>Technisches Problem</title>
+  <style>
+    body { text-align: center; padding: 150px; font: 20px Helvetica, sans-serif; color: #333; }
+    h1 { font-size: 50px; }
+    article { display: block; text-align: left; width: 650px; margin: 0 auto; }
+    a { color: #dc8100; text-decoration: none; }
+    a:hover { color: #333; text-decoration: none; }
+  </style>
+</head>
+<body>
+  <article>
+    <h1>StayHealthy</h1>
     <div>
-        <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="mailto:#">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
-        <p>&mdash; The Team</p>
+      <p>Wir sind bald zurück. Vielen dank für die Geduld.</p>
+      <p>Wenn du uns in der Zwischenzeit kontaktieren möchtest, sende bitte eine E-Mail an <a href="mailto:office@stayhealthy.at">office@stayhealthy.at</a>.</p>
+      <p>Du wirst sobald alles wieder läuft automatisch weitergeleitet.</p>
+      <p>&mdash; Dein StayHealthy Team</p>
     </div>
-</article>
+  </article>
+</body>
+</html>
